--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="download.jpg" alt="Chameleonnooyo" style="width: 100%; height: 960px;"></div>
+<div><img src="download1.jpg" alt="Chameleonnooyo" style="width: 100%; height: 960px;"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>new line</p>
-
+<div><img src="download2.jpg" alt="Treeeeee" style="width: 100%; height: 540px;"></div>
 </body>
 </html>
