Check how to Push

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <p>Merge Workssss!!</p>
 <p>new line</p>
 <div><img src="download2.jpg" alt="Treeeeee" style="width: 100%; height: 540px;"></div>
+<p>NEW LINE TO CHECK HOW TO PULL UPDATES TO GITHUB!!!</p>
 </body>
 </html>
